Added String Skeleton

--- a/Dumpper/Dumpper.csproj
+++ b/Dumpper/Dumpper.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.42.0" />
+  </ItemGroup>
+
 </Project>
