--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+
+*.vscode/
+
+
 # User-specific files
 *.rsuser
 *.suo
