--- a/Dumpper/Dumpper.csproj
+++ b/Dumpper/Dumpper.csproj
@@ -1,13 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <!--<Nullable>enable</Nullable>-->
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
 
-  <ItemGroup>
-    <PackageReference Include="Spectre.Console" Version="0.42.0" />
-  </ItemGroup>
+		<PackageId>Dumpper</PackageId>
+		<Version>0.0.1-alpha</Version>
+		<PackageTags>C#, Dotnet Core, Dump, Console, Print</PackageTags>
+		<Description>Print any type in your console</Description>
+		<Authors>Pritom Purkayasta</Authors>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Spectre.Console" Version="0.42.0" />
+	</ItemGroup>
 
 </Project>
