--- a/Dumpper/Dumpper.csproj
+++ b/Dumpper/Dumpper.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<PackageId>Dumpper</PackageId>
-		<Version>0.0.4-alpha</Version>
+		<Version>0.0.4-alpha.1</Version>
 		<PackageTags>C#, Dotnet Core, Dump, Console, Print</PackageTags>
 		<Description>Print any type in your console</Description>
 		<Authors>Pritom Purkayasta</Authors>
