--- a/Dumpper/Dumpper.csproj
+++ b/Dumpper/Dumpper.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
 
 		<PackageId>Dumpper</PackageId>
-		<Version>0.0.6</Version>
-		<PackageTags>C#, dotnet, dumping stuff in terminal, Console, Print, Writeline</PackageTags>
-		<Description>Print any type in your console</Description>
+		<Version>0.0.7</Version>
+		<PackageTags>dump, Dump, dumper, Dumper, dump(), Dump(), Dumpper, dumpper, linqpad, dumping, Console, Print, Writeline</PackageTags>
+		<Description>print with colors in your terminal</Description>
 		<Authors>Pritom Purkayasta</Authors>
 		<RepositoryUrl>https://github.com/purkayasta/Dumpper</RepositoryUrl>
 		<PackageProjectUrl>https://github.com/purkayasta/Dumpper</PackageProjectUrl>
@@ -22,7 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Spectre.Console" Version="0.42.0" />
+		<PackageReference Include="Spectre.Console" Version="0.47.0" />
 	</ItemGroup>
 
 </Project>
