--- a/ConsumerApp/ConsumerApp.csproj
+++ b/ConsumerApp/ConsumerApp.csproj
@@ -3,12 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <!-- <ImplicitUsings>enable</ImplicitUsings> -->
+     <ImplicitUsings>enable</ImplicitUsings> 
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Dumpper\Dumpper.csproj" />
   </ItemGroup>
+
+ 
 
 </Project>
